# Cryptocurrency-Prediction-Data-Product-Streamlit

./: Dockerfile  README.md  github.txt  pyproject.toml  requirements.txt
app/: main.py
services/: __init__.py  coindesk.py  market.py  news.py  news_rss.py
students/: __init__.py  btc.py  eth.py  sol.py  xrp.py
