[project]
name = "crypto-streamlit"
version = "0.1.0"
description = "Team Streamlit app: historical crypto OHLC + next-day HIGH predictions"
requires-python = ">=3.11"
dependencies = [
  "streamlit (==1.36.0)",
  "pandas (==2.2.2)",
  "numpy (==1.26.4)",
  "requests (>=2.31)",
  "plotly (>=5.24.0)",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
